[tool.poetry]
name = "ivdm-py"
version = "0.1.0"
description = "Interpolated Value Difference Metric for python"
authors = ["alex lukens <alukens@intelligent-artifacts.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.4.0"
vdm3 = {git = "git@github.com:alexdlukens/vdm3.git", rev = "develop"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
